added citizen papers
Nvm, it is actually an item, added it and extracted the image from the sprite atlas

--- a/data/html/css/main.css
+++ b/data/html/css/main.css
@@ -448,3 +448,8 @@ form.s10.col.offset-s1.editsavedata {
 .copper .itemquality {
     background-image: url("/rsc/Copper_Star.png");
 }
+
+.slotgraveyard,
+.slotchurch {
+    padding: 0px !important;
+}
