--- a/data/html/css/main.css
+++ b/data/html/css/main.css
@@ -41,7 +41,8 @@ main .intro h3 {
     margin-top:25px;
 }
 
-.settingsform input[type="text"] {
+.settingsform input[type="text"],
+.settingsform input[type="number"] {
     color: #e4e4e4;
 }
 
@@ -531,4 +532,26 @@ form.s10.col.offset-s1.editsavedata {
 
 .relationships .itemname {
     flex: none;
+}
+
+.settingsform input[type="text"]::placeholder {
+    color: #676767;
+    font-size: 10px;
+}
+
+.row.port {
+    margin-top: 25px;
+    margin-bottom: 0px;
+}
+
+.port .input-field {
+    transform: translateY(10px);
+}
+
+.port label {
+    transform: translateY(-24px) scale(0.8) !important;
+}
+
+.misc a {
+    color: inherit;
 }
