--- a/data/html/css/main.css
+++ b/data/html/css/main.css
@@ -555,3 +555,36 @@ form.s10.col.offset-s1.editsavedata {
 .misc a {
     color: inherit;
 }
+
+.loadingmask {
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.4);
+    pointer-events: none;
+    top: 0px;
+    left: 0px;
+}
+
+.loading {
+    zoom: 3;
+    margin: auto;
+}
+
+.miscbuttons .btn {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.toast .confirm {
+    background-color: #bb5050;
+    padding: 8px;
+    font-size: 75%;
+    text-align: center;
+    max-width: 80px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 0px 0px #903b3b, 4px 4px 0px 0px #7b2e2e;
+    cursor: pointer;
+}
