--- a/data/html/css/main.css
+++ b/data/html/css/main.css
@@ -588,3 +588,55 @@ form.s10.col.offset-s1.editsavedata {
     box-shadow: 2px 2px 0px 0px #903b3b, 4px 4px 0px 0px #7b2e2e;
     cursor: pointer;
 }
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+    background: #78797a;
+    border-radius: 10.2px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #858687;
+}
+
+input[type=range] {
+    border: 0px solid white;
+}
+
+p.timeoutput {
+    text-align: center;
+    height: 20px;
+    font-size: 14px;
+    margin-top: 0px !important;
+    transform: translateY(-24px);
+}
+
+.dayindicator {
+    display: flex;
+}
+
+.day {
+    flex: 1;
+    display: flex;
+    filter: grayscale(1);
+    transition: filter 0.5s;
+}
+
+.day img {
+    margin: 0 auto;
+}
+
+.day.active {
+    filter: grayscale(0);
+}
+
+.equipped-items .amount {
+    visibility: hidden;
+}
