fixing small mistakes for 0.1.24
The check for the better save soul DLC for workers was incorrectly checking for the game of crone DLC.

You can now also decide how many skulls bodies in graves should have.

Upgrading decorations now correctly displays both the sculpture / grave stone and the fence

--- a/data/html/css/main.css
+++ b/data/html/css/main.css
@@ -768,7 +768,7 @@ ul.collapsible {
     pointer-events: initial;
 }
 
-input#worker-efficiency {
+input#worker-efficiency, input#gravebody-skulls {
     margin: 0!important;
     height: 20px;
     width: 50px;
